# PuzzlesAndGames

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  PRD.md  README.md  TODO.md
.cursor/agents/: c-puzzle-core-and-tests.md  cmake-native-build.md  save-seed-trust-boundaries.md  sdl2-shell-integration.md  stp-upstream-porting.md  third-party-vendor-compliance.md
.cursor/rules/: puzzles-and-games.mdc  ui-visual-language.mdc
.github/workflows/: build.yml
games/catalog/: pg_catalog.c
games/g2048/: g2048_board.c  g2048_board.h  g2048_game.c  g2048_game.h
games/letterlock/: letterlock_game.c  letterlock_game.h  letterlock_glyphs.c  letterlock_glyphs.h  letterlock_puzzle.c  letterlock_puzzle.h
games/lightsout/: lightsout_board.c  lightsout_board.h  lightsout_game.c  lightsout_game.h
games/mastermind/: mastermind_game.c  mastermind_game.h  mastermind_logic.c  mastermind_logic.h
games/slitherlink/: slitherlink_board.c  slitherlink_board.h  slitherlink_game.c  slitherlink_game.h
games/stp/: stp_sdl_game.c  stp_sdl_game.h
games/tictactoe/: tictactoe_board.c  tictactoe_board.h  tictactoe_game.c  tictactoe_game.h
include/pg/: app.h  digits.h  game.h  sdl.h  text.h  theme.h
include/pg/catalog/: pg_catalog.h
scripts/: build-win-mingw.ps1  fetch-deps.ps1
src/: main.c
src/core/: pg_digits.c  pg_sdl.c  pg_text.c  pg_theme.c
src/shell/: pg_app.c  pg_game.c
tests/: test_g2048_board.c  test_letterlock_puzzle.c  test_lightsout_board.c  test_mastermind_logic.c  test_slitherlink_board.c  test_tictactoe_board.c
web/: shell_minimal.html
